sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:27: error: not found: value n
  for (i <- n to lgr -1){
            ^